deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: configiq-service
  namespace: psap-configiq
  labels:
    app: configiq
    app.kubernetes.io/name: configiq
spec:
  type: ClusterIP
  selector:
    app: configiq
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
